# EchoAgent

./: .gitignore  CHANGELOG.md  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
echo/: config.py  fsignore.py
echo/backends/: __init__.py  availability.py  base.py  errors.py  health.py  ollama_backend.py  openai_compatible.py
echo/branches/: __init__.py  cherry_pick.py  merge.py  models.py  store.py
echo/cli/: app.py
echo/cognition/: __init__.py  planner.py  summarizer.py  validation.py  verifier.py  verifier_support.py
echo/context/: __init__.py  compressor.py  repo_map.py  selector.py
echo/core/: __init__.py  agent.py
echo/memory/: __init__.py  store.py
echo/policies/: __init__.py  default.py
echo/runtime/: __init__.py  activity.py  backend_runtime.py  budget.py  engine.py  finalize.py  memory_sync.py  model_loop.py  outcomes.py  prepare.py  request_shape.py  stages.py  tool_calling.py  tool_tracking.py  trace.py  verify_flow.py
echo/tools/: __init__.py  registry.py  shell_policy.py
echo/types/: __init__.py  models.py
echo/ui/: __init__.py  intent_router.py  repl.py  shell.py
tests/: runtime_fixtures.py  test_branches.py  test_branching.py  test_intent_router.py  test_local_inspect_fallback.py  test_project_root.py  test_repl_integration.py  test_repl_ux.py  test_runtime_flows.py  test_shell_policy.py  test_validation_detection.py  test_verifier.py  test_verifier_claims.py
