[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-agent"
version = "0.1.0"
description = "Echo local coding agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "requests>=2.32.3",
  "prompt-toolkit>=3.0.43",
]

[project.scripts]
echocode = "echo.cli.app:app"

[tool.setuptools]
packages = [
  "echo",
  "echo.cli",
  "echo.core",
  "echo.cognition",
  "echo.context",
  "echo.memory",
  "echo.runtime",
  "echo.backends",
  "echo.policies",
  "echo.tools",
  "echo.ui",
  "echo.types",
]
